# 3D_Snake_OpenGL

./: .$engine_diagram.drawio.bkp  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  engine_diagram.drawio
Editor/: CMakeLists.txt  main.cpp
Editor/Editor/: Editor.sln  Editor.vcxproj  Editor.vcxproj.filters  main.cpp
Editor/Editor/code/editor/: edt_editor_init.cpp  edt_editor_init.h  edt_editor_system.cpp  edt_editor_system.h
Editor/Editor/res/: lines.frag  lines.vert  normal.geom  normal.vert  scene.frag  scene.geom  scene.vert  scene_network.frag  scene_network.geom
Editor/code/editor/: CMakeLists.txt  edt_editor_init.cpp
Editor/code/editor_system/: CMakeLists.txt  edt_editor_init.cpp  edt_editor_init.h  edt_editor_system.cpp  edt_editor_system.h  edt_file_dialog.cpp  edt_file_dialog.h  edt_guizmo.hpp  edt_input_manager.cpp  edt_input_manager.h
Editor/res/: first_include.vert  main.vert  scene.frag  scene.geom  scene.vert  scene_inst.frag  scene_inst.vert  second_include.vert  sky.frag  sky.vert
Editor/res/objects/robot/: gen_robot.glb
Editor/res/shaders/: composition.frag  composition.vert  normal.geom  phong_model_lib.frag  pipline_struct_lib.glsl  scene.frag  scene.vert  scene_inst.vert  scene_network.vert  transparent.frag  transparent.vert  z_prepass.frag  z_prepass.vert
core/: CMakeLists.txt  main.cpp
core/code/Image/: CMakeLists.txt  Image.h  ImageLib.vcxproj  ImageLib.vcxproj.filters  Source.cpp  image_loader.h
core/code/application/: CMakeLists.txt  application.cpp  application.h  components_init.cpp
core/code/common/: CMakeLists.txt  common.h  ds_event.hpp  ds_type_id.hpp  engine_assert.h  open_gl_specific.cpp  open_gl_specific.h
core/code/debug_ui/: CMakeLists.txt  debug_ui_api.h  debug_ui_init.cpp  debug_ui_init.h  debug_ui_menu_layer.cpp  debug_ui_menu_layer.h  debug_ui_system.cpp  debug_ui_system.h
core/code/game_system/: CMakeLists.txt  game_system.cpp  gs_game_init.cpp  gs_game_system.cpp  gs_game_system.h
core/code/input/: CMakeLists.txt  inp_input_actions.cpp  inp_input_actions.h  inp_input_init.cpp  inp_input_init.h  inp_input_manager.h  inp_input_system.h  inp_key_enums.hpp  inp_keyboard_device.cpp  inp_keyboard_device.h
core/code/render/: Chunk.h  LineBatch.cpp  LineBatch.h  VoxelRenderer.cpp  rnd_buffer.cpp  rnd_buffer.h  rnd_buffer_layout.h  rnd_render_context.cpp  rnd_render_context.h  rnd_render_init.cpp  rnd_render_system.cpp  rnd_render_system.h  rnd_renderer_3d.cpp  rnd_renderer_3d.h  rnd_uniform_buffer.cpp
core/code/resource/: CMakeLists.txt  res_resource_init.cpp  res_resource_model.cpp  res_resource_model.h  res_resource_shader.cpp  res_resource_shader.h  res_resource_tag.cpp  res_resource_tag.h  res_resource_texture.h
core/code/scene/: CMakeLists.txt  cude.h  mesh.cpp  primitives.h  scn_cude.cpp  scn_mesh.cpp  scn_mesh.h  scn_model.cpp  scn_model.h  scn_primitives.cpp  scn_primitives.h  scn_sphere.cpp  scn_transform_3d.hpp  sphere.cpp
core/code/serialize/: image_loader.cpp
core/code/ui/: bitmap.cpp  ui_shape.cpp  ui_shape.h  ui_system.cpp
core/code/windows/: CMakeLists.txt  Window.cpp  rnd_render_context.cpp  rnd_render_context.h  window_system.cpp  window_system.h  wnd_window.cpp  wnd_window.h  wnd_window_system.cpp  wnd_window_system.h  wnd_windows_init.cpp  wnd_windows_init.h
core/components/Image/: CMakeLists.txt  image.cpp  image.h  image_loader.cpp
core/components/application/: CMakeLists.txt  application.cpp  application.h  components_init.cpp  components_init.h
core/components/common/: CMakeLists.txt  common.h  ds_bit_frags.hpp  ds_event.hpp  ds_store.hpp  ds_type_id.hpp  eng_transform_3d.hpp  engine_assert.h  enums.h  timer.hpp
core/components/debug_ui/: CMakeLists.txt  debug_ui_init.cpp  debug_ui_menu_layer.cpp  debug_ui_menu_layer.h  debug_ui_renderer.cpp  debug_ui_renderer.h  debug_ui_system.cpp  debug_ui_system.h
core/components/ecs/: CMakeLists.txt  ecs_common_system.cpp  ecs_common_system.h  ecs_common_system.hpp  ecs_component.cpp  ecs_component.h  ecs_entity.cpp  ecs_entity.h  ecs_input_manager.cpp  ecs_input_manager.h
core/components/game_system/: CMakeLists.txt  gs_game_init.cpp  gs_game_init.h  gs_game_system.cpp  gs_game_system.h  gs_renderer_3d.cpp  gs_renderer_3d.h
core/components/input/: CMakeLists.txt  inp_events.hpp  inp_input_actions.cpp  inp_input_actions.h  inp_input_init.cpp  inp_input_init.h  inp_input_manager.cpp  inp_input_manager.h  inp_input_manager_base.cpp  inp_input_manager_base.h  inp_input_system.cpp  inp_input_system.h  inp_key_enums.hpp  inp_keyboard_device.cpp  inp_keyboard_device.h  inp_mouse_device.cpp  inp_mouse_device.h
core/components/resource/: CMakeLists.txt  res_instance.cpp  res_instance.h  res_mesh.hpp  res_model_loader.cpp  res_model_loader.h  res_module_init.cpp  res_picture.cpp  res_resource_base.h  res_resource_init.h  res_resource_model.cpp  res_resource_model.h  res_resource_shader.cpp  res_resource_shader.h  res_resource_system.cpp  res_resource_system.h  res_resource_tag.cpp  res_resource_tag.h  res_resource_text_file.cpp  res_resource_text_file.h  res_resource_texture.cpp  res_resource_texture.h  res_system.cpp  res_system.h  res_tag.cpp  res_tag.h
core/components/scene/: CMakeLists.txt  scn_camera_component.hpp  scn_camera_controller.cpp  scn_camera_controller.h  scn_camera_controller_component.hpp  scn_camera_controller_system.cpp  scn_camera_controller_system.h  scn_cude.cpp  scn_cude.h  scn_glm_json_convert.cpp  scn_glm_json_convert.h  scn_material_component.cpp  scn_material_component.hpp  scn_mesh.cpp  scn_mesh.h  scn_model.cpp  scn_model.h  scn_primitives.cpp  scn_primitives.h  scn_renderer.cpp  scn_renderer.h  scn_sphere.cpp  scn_sphere.h  scn_transform_3d.hpp  scn_transform_system.cpp  scn_transform_system.h
core/components/windows/: CMakeLists.txt  wnd_input_keycode_convert.hpp  wnd_window.cpp  wnd_window.h  wnd_window_context.cpp  wnd_window_context.h  wnd_window_init.cpp  wnd_window_init.h  wnd_window_system.cpp  wnd_window_system.h
core/res/: lines.frag  lines.vert
lib3dparty/stb_image/: CMakeLists.txt
(+398 files in other folders)
